--- a/.babelrc
+++ b/.babelrc
@@ -1,14 +1,3 @@
 {
-  "presets": [
-    [
-      "es2015",
-      {
-        "modules": false
-      }
-    ],
-    "react"
-  ],
-  "plugins": [
-    "react-hot-loader/babel"
-  ]
+  "presets": [["es2015", {"modules": false}], "react"]
 }
