--- a/package.json
+++ b/package.json
@@ -1,32 +1,30 @@
 {
-  "name": "build-react-app-tchapi",
+  "name": "react_search",
   "version": "1.0.0",
-  "description": "Ceci est un template buildable en react proposant une base adapté à mes besoins",
+  "description": "Search app using React",
   "main": "index.js",
-  "author": "Gérome Lacaux",
   "scripts": {
-  	"dev": "cross-env NODE_ENV=development webpack-dev-server --hot",
-    "build": "cross-env NODE_ENV=production webpack"
-	},
-  "license": "MIT",
-  "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "cross-env": "^5.1.3",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "node-sass": "^4.7.2",
-    "postcss-loader": "^2.1.1",
-    "react-hot-loader": "^3.0.0-beta.7",
-    "sass-loader": "^6.0.6",
-    "style-loader": "^0.20.2",
-    "webpack": "^3.11.0",
-    "webpack-dev-server": "^2.10.1"
+    "start": "webpack-dev-server --mode development --hot",
+    "build": "webpack --mode production"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "autoprefixer": "^8.0.0",
-    "css-loader": "^0.28.10",
     "react": "^16.2.0",
     "react-dom": "^16.2.0"
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.4",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
+    "css-loader": "^0.28.11",
+    "html-webpack-plugin": "^3.0.6",
+    "react-hot-loader": "^4.2.0",
+    "style-loader": "^0.21.0",
+    "webpack": "^4.1.1",
+    "webpack-cli": "^2.0.10",
+    "webpack-dev-server": "^3.1.0"
   }
 }
