--- a/package.json
+++ b/package.json
@@ -1,30 +1,27 @@
 {
-  "name": "react_search",
+  "name": "build-react-app-tchapi",
   "version": "1.0.0",
-  "description": "Search app using React",
+  "description": "Ceci est un template buildable en react proposant une base adapté à mes besoins",
   "main": "index.js",
+  "author": "Gérome Lacaux",
+  "license": "MIT",
   "scripts": {
-    "start": "webpack-dev-server --mode development --hot",
-    "build": "webpack --mode production"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "start": "webpack-dev-server --config ./webpack.config.js --mode development"
   },
   "devDependencies": {
-    "babel-core": "^6.26.0",
+    "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
-    "babel-preset-env": "^1.6.1",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
-    "css-loader": "^0.28.11",
-    "html-webpack-plugin": "^3.0.6",
+    "babel-preset-stage-2": "^6.24.1",
     "react-hot-loader": "^4.2.0",
-    "style-loader": "^0.21.0",
-    "webpack": "^4.1.1",
-    "webpack-cli": "^2.0.10",
-    "webpack-dev-server": "^3.1.0"
+    "webpack": "^4.8.3",
+    "webpack-cli": "^2.1.4",
+    "webpack-dev-server": "^3.1.4"
+  },
+  "dependencies": {
+    "react": "^16.4.0",
+    "react-dom": "^16.4.0",
+    "styled-components": "^3.2.6"
   }
 }
