--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,7 @@
 {
   "presets": [
-    "env",
-    "react",
-    "stage-2"
+    "es2015",
+    "react"
   ],
   "plugins": [
     "react-hot-loader/babel"
